debug: cannot sign in (no error but no sign in status)

--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,6 +1,6 @@
 {% extends '__base__.html' %}
 
-{% block title %}journal{% endblock %}
+{% block title %}日志{% endblock %}
 
 {% block beforehead %}
 
