--- a/templates/manage_blog_edit.html
+++ b/templates/manage_blog_edit.html
@@ -98,7 +98,7 @@
                 <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-save"></i> 保存</button>
                 <a href="/manage/blogs" class="uk-button"><i class="uk-icon-times"></i> 取消</a>
             </div>
-
+            </div>
         </form>
     </div>
 
